# H-MELC

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  LICENSE_PENDING.md  README.md  VERSION.md  docker-compose.yml  mkdocs.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e001_baseline.py  e002_asset_core_tables.py  e003_repair_core_tables.py  e004_audit_log_tables.py  e005_identity_auth_tables.py  e006_mdm_category_entries_tables.py  e017_pm_core_tables.py  (+24 more)
backend/app/: main.py
backend/scripts/: add_phase2_endpoints.py  create_identity_user.py  docker_bootstrap.py
backend/tests/: conftest.py  pg_jwt_helpers.py  test_ai_knowledge_postgres_integration.py  test_api_design_contract.py  test_api_v1.py  test_asset_intake_contract.py  test_asset_postgres_integration.py  test_audit_emit_postgres_integration.py  test_audit_postgres_integration.py  test_auth_postgres_integration.py  test_business_partner_mdm_contract.py  test_device_classification_linkage_contract.py  test_finance_postgres_integration.py  test_hmdm_contract.py  test_master_data_config_contract.py  test_mdm_device_categories_contract.py  test_mdm_postgres_integration.py  test_metrology_postgres_integration.py  test_operation_center_contract.py  test_org_master_integration_contract.py  test_procurement_postgres_integration.py  test_rbac_negative_postgres_integration.py  test_repair_postgres_integration.py  test_supplier_portal_postgres_integration.py  test_workflow_postgres_integration.py
(+382 files in other folders)
