[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "h-melc-backend"
version = "0.1.0"
description = "H-MELC 医院医学装备全生命周期闭环管理平台 FastAPI 后端"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "minio>=7.2.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.5.2",
  "PyJWT[crypto]>=2.9.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
filterwarnings = [
  # Starlette/FastAPI 弃用常量名；上游统一后再移除此过滤
  "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
]
